--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
-    <style>
-      
-    </style>
   </head>
   <body>
     <div class="container">
       <h1>Weather App</h1>
       <form id="weather-form">
         <input type="text" id="city" placeholder="Enter city name" required />
-        <button type="submit">Get Weather</button>
+        <button type="submit" class="submit">Get Weather</button>
       </form>
       <div class="weather-info" id="weather-info"></div>
     </div>
