--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
         <input type="text" id="city" placeholder="Enter city name" required />
         <button type="submit" class="submit">Get Weather</button>
       </form>
+      <button id="toggle-unit">Toggle °F/°C</button>
       <div class="weather-info" id="weather-info"></div>
     </div>
   </body>
